# xpmclient

contrib/: README.md  build.sh  deploy.sh
src/: CMakeLists.txt  baseclient.cpp  cudautil.cpp  hwmon-amdgpu.cpp  opencl.cpp  protocol.proto
src/xpm/common/: getblocktemplate.cpp
src/xpm/cuda/: benchmarks.cpp  config.txt  sieve.cu  xpmclient.cpp  xpmclient.h
src/xpm/opencl/: benchmarks.cpp  config.txt  generic_sieve.cl  xpmclient.cpp  xpmclient.h
src/xpm/rpc/common/: primecoin.cpp
src/xpm/rpc/include/: primecoin.h
